# py-aqi-in-api

./: .gitignore  README.md  REVIEW.md  example.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-question.md  2-bug-report.md  3-feature-request.md
.github/workflows/: publish.yml  pull_request.yml
src/aqi_in_api/: __init__.py  _client.py  _constants.py  _exceptions.py  _token.py  _utils.py  models.py
tests/: test_client.py  test_exceptions.py  test_token.py  test_utils.py
