[project]
name = "aqi-in-api"
version = "0.1.0"
description = "Python SDK for the AQI.in Air Quality API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "GuyKh" },
]

dependencies = [
    "httpx>=0.28.0",
    "pyjwt>=2.10.0",
]

[project.urls]
Repository = "https://github.com/GuyKh/py-aqi-in-api"
Issues = "https://github.com/GuyKh/py-aqi-in-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqi_in_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W",   # core
    "UP",    # pyupgrade
    "SIM",   # simplify
    "RET",   # return
    "ARG",   # unused args
    "PT",    # pytest
    "BLE",   # blind exception
    "RUF",   # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"src/aqi_in_api/models.py" = [
    "N815",  # camelCase field names — matches API JSON keys
]
"src/aqi_in_api/_exceptions.py" = [
    "N818",  # exception name doesn't end with "Error" — intentional (matches TS SDK)
]
"tests/*" = [
    "D",     # docstrings not required in tests
    "S101",  # assert is standard in pytest
]

[tool.mypy]
strict = true
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src/"]
follow_untyped_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest_httpx"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::jwt.InsecureKeyLengthWarning",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
]
