[project]
name = "aqi-in-api"
version = "0.1.0"
description = "Python SDK for the AQI.in Air Quality API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "GuyKh" },
]

dependencies = [
    "httpx>=0.28.0",
    "pyjwt>=2.10.0",
]

[project.urls]
Repository = "https://github.com/GuyKh/py-aqi-in-api"
Issues = "https://github.com/GuyKh/py-aqi-in-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqi_in_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/aqi_in_api/models.py" = ["N815"]
"src/aqi_in_api/_exceptions.py" = ["N818"]

[tool.mypy]
strict = true
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src/"]
follow_untyped_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest_httpx"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
    "bandit>=1.9.4",
]
